--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
         "psr-4": {
             "Omnipay\\AzeriCard\\": "src/"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": false
+        }
     }
 }
